[gd_scene load_steps=3 format=3 uid="uid://vqukvgbcgi53"]

[ext_resource type="PackedScene" uid="uid://swgu7wlvgbpy" path="res://src/expand container button/expand_container.tscn" id="1_1gm44"]
[ext_resource type="Script" path="res://src/others view/others_entry.gd" id="1_dscw3"]

[node name="others_entry" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_dscw3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="expand_container" parent="VBoxContainer" instance=ExtResource("1_1gm44")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="main_cont" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[connection signal="request_expand" from="VBoxContainer/expand_container" to="." method="_on_expand_container_request_expand"]

[editable path="VBoxContainer/expand_container"]
